--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "websokects",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node --watch server.js"
   },
   "keywords": [],
   "author": "",
